# python

./: LICENSE  README.md  auto.py  baixar.py  cal_pri.py  centralizar.py  cpf.txt  cronometro_com_botao.py  expoente_ulti.py  index.py  lambada-entender.py  logica.py  pyproject.toml
Pandas/: 1-test.py  README.md
aprender_vim/: .exe.py.swp  .programando.py.swp  exe.py  exe.w  programando.py  sla.w
carregaCarro/: main.py
class_objs/: :vs  imposto.py  info_aluno.py  main.py  rele_class.py  setcorrecao.py  sla.py  sla_class.py  strings.py  teste.py
correcao_estudantes/: correcao_cpf.py  cpf.py  porce.py  req.py
deb/: checkinstall_1.6.2.deb  photon.0.1.deb
estudos_python/: README.md  aaa.py  alt-larg.py  contar.py  deff.py  desenhar-tartaruga.py  dna.py  erro.py  escalaa.py  fac.py  falha.py  for.py  horas.py  imagem.py  input.py  input_kivy.py  inver-boleano.py  lis_sem_doid.py  lista.py  matriz.py  monte-if.py  pass-arg-sem-chamar.py  pp.py  raspa.py  raspa.txt  relembrando.py  repe_fun.py  senhas.py  simu-caregamento.py  sla.py  sobre.py  soma.py  sorteiar.py  sorteio.py  vendas.py
faci_kivy/: test_beta_jogo.py
funcao/: add.py  deff.py  funcao-zip.ipynb  funcao-zip.py  inicio.kv
le_arquivo/: escreve.py
ler_paginas/: main.py  pagina.txt  test2.py  video.py
post/: comentario.py
resolvendo_perguntas/: 01.py  Trabalho-Python.py  mercado.py  numList.py  rosolu.py  rosolu.txt
test_kivy/: acord.py  animacao.py  cronometro_com_botao.py  estudando.py  programador.kv  tarefas.py  test_kv.py
testes/: aprender.py  numero.py  test_soma.py
(+89 files in other folders)
