[tool.poetry]
name = "python"
version = "0.1.0"
description = ""
authors = ["robertowell <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
kivy = "^2.0.0"
pymssql = "^2.1.5"
selenium = "^3.141.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
